--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer<span>Freelance</span></h3>
                                     <p class="experience-cards-container-card-container-description">
-                                        <b>December 2022 • Present</b>
+                                        <b>December 2022</b>
                                     <p>Workbud • Remote</p>
                                     </p>
                                 </div>
@@ -485,14 +485,36 @@
                         <div class="answer">
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
-                                    <a href="https://find-a-job.vercel.app/" target="_blank"><img src="img/findajob.png"
-                                            alt="FindAJob"></a>
+                                    <a href="https://lnui.lndev.me" target="_blank"><img src="img/lnui.png"
+                                            alt="LNUI"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>FrontEnd Developer</h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>July 2022 • Present</b>
+                                    <p><a href="https://lnui.lndev.me" target="_blank">LNUI</a></p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        Create beautiful websites with multiple components
+                                    </h4>
+                                    <div><button>NEXT JS</button><button>GIT</button>
+                                        <button>GITHUB</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
+                                    <a href="https://ulwo.lndev.me/" target="_blank"><img src="img/ulwo.png"
+                                            alt="Ulwo"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>April 2022 • Present</b>
-                                    <p><a href="https://find-a-job.vercel.app/" target="_blank">Find A Job</a></p>
+                                    <p><a href="https://ulwo.lndev.me/" target="_blank">Ulwo</a></p>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
@@ -500,7 +522,7 @@
                                         It is a web application that allows users to find work and also to create job
                                         offers.
                                     </h4>
-                                    <div><button>VUEJS</button> <button>FIREBASE</button><button>GIT</button>
+                                    <div><button>NEXT JS</button> <button>FIREBASE</button><button>GIT</button>
                                         <button>GITHUB</button>
                                     </div>
                                 </div>
