add uxcel certif

--- a/index.fr.html
+++ b/index.fr.html
@@ -835,6 +835,25 @@
                             </div>
                         </div>
                         <div class="cert-card">
+                            <a href="https://drive.google.com/drive/folders/1mvo_idj5Kq2OhOPNFiUewFEgGPbyRqq0?usp=share_link"
+                                target="_blank">
+                                <div class="card-img">
+                                    <img src="./img/uxcel.svg" alt="uxcel" />
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <div class="card-body__text">
+                                    <h3>Uxcel</h3>
+                                    <h5>Cliquez sur l' image</h5>
+                                </div>
+                                <div class="card-body__footer">
+                                    <button>Design</button>
+                                    <button>UX</button>
+                                    <button>UI</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cert-card">
                             <a href="https://drive.google.com/drive/folders/1U677r2Nnmtq8pm8klai63iOYFMSuWxl6?usp=sharing"
                                 target="_blank">
                                 <div class="card-img">
