--- a/index.fr.html
+++ b/index.fr.html
@@ -166,7 +166,7 @@
                     <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                     <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
-                    <a href="https://drive.google.com/file/d/1wC93QVBJYkpxAzXM6p5-xDzYeC065RRI/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/176ifY1e-_G-9muqsIhyvsPR3TbvilXwQ/view?usp=sharing"
                         target="_blank" class="header-container-cv">Mon CV</a>
                 </div>
             </div>
@@ -345,14 +345,14 @@
                             <div class="line"></div>
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
-                                    <a href="https://www.workbud.com/" target="_blank"><img src="img/workbud.png"
-                                            alt="workbud"></a>
+                                    <a href="https://sweez.io/" target="_blank"><img src="img/sweeze.png"
+                                        alt="workbud"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer<span>Freelance</span></h3>
                                     <p class="experience-cards-container-card-container-description">
-                                        <b>Decembre 2022</b>
-                                    <p>Workbud • Remote</p>
+                                        <b>Janvier 2023 • Mars 2023</b>
+                                    <p>Sweeze • Remote</p>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
@@ -360,7 +360,8 @@
                                         Mon but était de concevoir des interfaces utilisateurs pour une application web
                                     </h4>
                                     <div>
-                                        <button>SVELTE JS</button>
+                                        <button>Next JS</button>
+                                        <button>Tailwind CSS</button>
                                         <button>GIT</button>
                                     </div>
                                 </div>
