--- a/old/index.html
+++ b/old/index.html
@@ -166,7 +166,7 @@
                     <h1 class="header-container-title">Hi, I'm Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Front End Developer</h1>
                     <h2>This is my personal site, where you will find all the information about me.</h2>
-                    <a href="https://drive.google.com/file/d/1wC93QVBJYkpxAzXM6p5-xDzYeC065RRI/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/176ifY1e-_G-9muqsIhyvsPR3TbvilXwQ/view?usp=sharing"
                         target="_blank" class="header-container-cv">My CV</a>
                 </div>
             </div>
@@ -339,14 +339,14 @@
                             <div class="line"></div>
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
-                                    <a href="https://www.workbud.com/" target="_blank"><img src="img/workbud.png"
+                                    <a href="https://sweez.io/" target="_blank"><img src="img/sweeze.png"
                                             alt="workbud"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer<span>Freelance</span></h3>
                                     <p class="experience-cards-container-card-container-description">
-                                        <b>December 2022</b>
-                                    <p>Workbud • Remote</p>
+                                        <b>January 2023 • March 2023</b>
+                                    <p>Sweeze • Remote</p>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
@@ -354,7 +354,8 @@
                                         My goal was to design user interfaces for a web application
                                     </h4>
                                     <div>
-                                        <button>SVELTE JS</button>
+                                        <button>Next JS</button>
+                                        <button>Tailwind CSS</button>
                                         <button>GIT</button>
                                     </div>
                                 </div>
